# Hackathons

./: README.md
Hackathon Non Regression Test/: .env.example  .gitignore  .gitlab-ci.yml  Makefile  README.md  dataset_cache.jsonl  deliverable_intermedio_1.csv  deliverable_intermedio_2.xlsx  esempio_deliverable_intermedio_1.csv  model_list.json  pyproject.toml
Hackathon Non Regression Test/configs/: models.yaml
Hackathon Non Regression Test/docs/: TECHNICAL_DESIGN.md  new_rules.md
Hackathon Non Regression Test/frontend/: index.html  package-lock.json  package.json
Hackathon Non Regression Test/frontend/src/: App.tsx  Layout.tsx  api.ts  hooks.ts  index.css
Hackathon Non Regression Test/notebooks/: data_exploration.ipynb
Hackathon Non Regression Test/scripts/: debug_identify_task.py  run_pipeline.py  validate_setup.py
Hackathon Non Regression Test/src/backend/: api.py
Hackathon Non Regression Test/src/data_processing/: __init__.py  main.py
Hackathon Non Regression Test/src/evaluation/: __init__.py  main.py
Hackathon Non Regression Test/src/frontend/: __init__.py  app.py
Hackathon Non Regression Test/src/insight_agent/: __init__.py  main.py
Hackathon Non Regression Test/src/model_selection/: __init__.py  main.py
Hackathon Non Regression Test/src/prompt_optimizer/: __init__.py  (+1 more)
Hackathon Non Regression Test/tests/: test_data_processing.py  test_evaluation.py  test_frontend.py  test_imports.py  test_insight_agent.py  test_model_selection.py  test_prompt_optimizer.py  test_providers.py  test_reporting.py  test_runner.py  test_synthetic_dataset.py
(+55 files in other folders)
